--- a/web/add.html
+++ b/web/add.html
@@ -10,7 +10,7 @@
         价格：<input type="text" name="price"/><br/>
         库存：<input type="text" name="fcount"/><br/>
         备注：<input type="text" name="remark"/><br/>
-        <input type="submit" value="添加"/>
+        <input type="submit" value="添加"/>qqqqqqqqqqqqqqqq
     </form>
 </body>
 </html>
