--- a/web/add.html
+++ b/web/add.html
@@ -2,15 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel="stylesheet" href="css/add.css">
 </head>
 <body>
-    <form action="add" method="post">
-        名称：<input type="text" name="fname"/><br/>
-        价格：<input type="text" name="price"/><br/>
-        库存：<input type="text" name="fcount"/><br/>
-        备注：<input type="text" name="remark"/><br/>
-        <input type="submit" value="添加"/>
-    </form>
+<div id="div_container">
+    <div id="div_fruit_list">
+        <p class="center f30">新增库存信息</p>
+        <!--<form action="add.do" method="post">-->
+        <form action="/add.do" method="post">
+            <table id="tbl_fruit">
+                <tr>
+                    <th class="w20">名称：</th>
+                    <!-- <td><input type="text" name="fname" th:value="${fruit.fname}"/></td> -->
+                    <td><input type="text" name="fname" /></td>
+                </tr>
+                <tr>
+                    <th class="w20">单价：</th>
+                    <td><input type="text" name="price" /></td>
+                </tr>
+                <tr>
+                    <th class="w20">库存：</th>
+                    <td><input type="text" name="fcount" /></td>
+                </tr>
+                <tr>
+                    <th class="w20">备注：</th>
+                    <td><input type="text" name="remark" /></td>
+                </tr>
+                <tr>
+                    <th colspan="2">
+                        <input type="submit" value="添加" />
+                    </th>
+                </tr>
+            </table>
+        </form>
+    </div>
+</div>
 </body>
 </html>
