--- a/web/edit.html
+++ b/web/edit.html
@@ -7,9 +7,10 @@
 <div id="div_container">
     <div id="div_fruit_list">
         <p class="center f30">编辑库存信息</p>
-        <form th:action="@{/update.do}" method="post" th:object="${fruit}">
+        <form th:action="@{/fruit.do}" method="post" th:object="${fruit}">
             <!-- 隐藏域 ： 功能类似于文本框 ， 它的值会随着表单的发送也会发送给服务器，但是界面上用户看不到 -->
             <input type="hidden" name="fid" th:value="*{fid}"/>
+            <input type="hidden" name="operate" th:value="update"/>
             <table id="tbl_fruit">
                 <tr>
                     <th class="w20">名称:</th>
